<resources>
    <string name="app_name">Homework12_Leacture15</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="sold">Sold</string>
    <string name="empty">Empty</string>
    <string name="description">Description</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total:</string>
    <string name="total_prise">Total prise:</string>
    <string name="_0">0</string>
    <string name="add_to_cart">Add to cart</string>
</resources>