<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDescriptionFragment"
    android:background="@color/dark_blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sold_frame_background_color">
        <ImageView
            android:id="@+id/img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"/>

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:background="@null"
            android:layout_margin="10dp"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/empty"
            android:textAppearance="@style/big_heading"
            android:layout_marginLeft="30dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/heart"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="30dp"
            android:background="@null"/>
    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:background="@drawable/sold_drawble_shape"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@id/tvSold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/description_style"
                android:text="0"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/description_style"
                android:text="@string/sold"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/star"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5.0"
            android:layout_marginLeft="20dp"
            android:textAppearance="@style/normal"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(0 views)"
            android:layout_marginStart="4dp"
            android:textAppearance="@style/normal"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/description_heading"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/normal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:textAppearance="@style/description_heading"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/colorsRecycler"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/description_heading"
            android:text="@string/quantity"
            android:layout_marginRight="40dp"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:background="@drawable/plus_minus_shape"
            android:layout_gravity="center_vertical">

            <ImageButton
                android:id="@+id/plusBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/plus"
                android:background="@null"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/description_heading"
                android:text="0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical" />

            <ImageButton
                android:id="@+id/minusBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/minus"
                android:background="@null"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_prise"
            android:textAppearance="@style/normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:textAppearance="@style/description_heading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:drawableStart="@drawable/bag"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/add_to_cart_button_shape"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tv1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAppearance="@style/description_heading"
            app:layout_constraintStart_toEndOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@+id/tv1" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>